added meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cungur</title>
+    <meta
+      name="description"
+      content="Cungur - Send and receive anonymous messages easily."
+    />
+    <meta name="keywords" content="anonymous, messages, social, cungur" />
+    <meta property="og:title" content="Cungur" />
+    <meta
+      property="og:description"
+      content="Send and receive anonymous messages easily."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cungur.vercel.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cungur" />
+    <meta
+      name="twitter:description"
+      content="Send and receive anonymous messages easily."
+    />
   </head>
   <body>
     <div id="root"></div>
